Fix gap between stars

--- a/css/style.css
+++ b/css/style.css
@@ -782,15 +782,15 @@ a:active {
 }
 
 .hotel-item:first-of-type .stars-container {
-  width: 72px;
+  width: 100px;
 }
 
 .hotel-item:nth-of-type(2) .stars-container {
-  width: 54px;
+  width: 75px;
 }
 
 .hotel-item:last-of-type .stars-container {
-  width: 36px;
+  width: 50px;
 }
 
 .hotels .main-footer {
